--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "class-validator": "^0.14.1",
     "helmet": "^8.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
