--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "viem": "^2.21.18"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
